# swype-kbd

./: ARCHITECTURE.md  Cargo.toml  README.md
crates/app/: Cargo.toml
crates/app/src/: font.rs  input.rs  keyboard.rs  main.rs  render.rs  us_keymap.xkb
crates/decoder/: Cargo.toml
crates/decoder/src/: decoder.rs  dictionary.rs  layout.rs  lib.rs  synth.rs  template.rs  trace.rs  words_en.txt
data/: README.md  words_50k.txt
packaging/: TESTER-README.md  make-release.sh  run.sh
